# cpplabs

./: CMakeLists.txt  README.md  header.h  heighestNum.cpp  main.cpp
LAB4/: CMakeLists.txt  hexagon.cpp  hexagon.h  interface.h  main.cpp  triangle.h
Lab1/: header.h  main.cpp
Lab1/addons/: changeRadius.cpp  circle.cpp  circle.h  heighestNum.cpp  roundNumber.cpp  transposeMatrix.cpp
Lab2/: main.cpp  main.h  operations.cpp
Lab3_1/: CMakeLists.txt  main.cpp  main.h  realisation.cpp
Lab3_5/: CMakeLists.txt  realisation .cpp  stack.cpp  stack.h
Lab4/: CMakeLists.txt  interface.cpp  main.cpp  triangle.cpp
Lab4/src/Factory/: CommandInterface.h
Lab4/src/Factory/FiguresFactory/: CalcCenterFigure.cpp  CalcCenterFigure.h  CalcPerimeterFigure.cpp  CalcPerimeterFigure.h  CalcSquareFigure.cpp  CalcSquareFigure.h  CreateFigure.cpp  CreateFigure.h  FigureFactory.cpp  FigureFactory.h  PrintFigure.cpp  PrintFigure.h  SortFigure.cpp  SortFigure.h  getMemoryFigure.cpp  getMemoryFigure.h
Lab4/src/figures/hexagon/: hexagon.cpp  hexagon.h
Lab4/src/figures/triangle/: triangle.cpp  triangle.h
Lab4/src/hexagon/: hexagon.cpp  hexagon.h
Lab4/src/interface/BaseCObject/: BaseCObject.h
Lab4/src/interface/CVector2D/: CVector2D.cpp  CVector2D.h
Lab4/src/interface/Figure/: Figure.h
Lab4/src/interface/IDialogInitiale/: IDialogInitiale.h
Lab4/src/interface/IGeoFig/: IGeoFig.h
Lab4/src/interface/IPhysObject/: IPhysObject.h
Lab4/src/interface/IPrintable/: IPrintable.h
Lab4/src/menu/: menu.cpp  menu.h
Lab4/src/triangle/: triangle.cpp  triangle.h
Lab5/: CMakeLists.txt  main.cpp
Lab5/src/App/: App.cpp  App.h
Lab5/src/Exception/: EmptyStackException.h  StackExceptions.h
Lab5/src/Stack/: Stack.cpp  Stack.h
Lab5/src/Swap/: Swap.cpp  Swap.h
Lab6/: CMakeLists.txt  main.cpp
Lab6/src/App/: App.cpp  App.h
Lab6/src/CPoint/: CPoint.cpp  CPoint.h
Lab6/src/Functions/: find_not.h  is_sorted.h  none_of.h
Lab7/: CMakeLists.txt  main.cpp
Lab7/src/App/: App.cpp  App.h
Lab7/src/CircularBuffer/: CircularBuffer.cpp  CircularBuffer.h
Lab7/src/Exception/: BufferOverflowException.cpp
addons/: changeRadius.cpp  roundNumber.cpp
src/CircularBuffer/: CircularBuffer.cpp  CircularBuffer.h
src/Exception/: BufferOverflowException.h
